# shorterdb

./: .gitignore  Cargo.toml  build.rs  randomdata.py
proto/: commands.proto
src/: errors.rs  main.rs  server.rs
src/kv/: db.rs  memtable.rs  mod.rs  sst.rs  wal.rs
